--- a/css/hackathon.css
+++ b/css/hackathon.css
@@ -31,9 +31,46 @@ ul {
   padding-right: 20px;
 }
 
+.banner-text {
+  /*font-size: 30px;
+  padding-top: 50px;*/
+
+  margin-bottom: 10px;
+  padding-bottom: 0px;
+}
+
 .sub-text {
   text-align: center;
+  margin-bottom: 0px;
 }
+
+.cta {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.cta .button {
+  text-decoration: none;
+  text-align: center;
+  font-family: 'Roboto';
+  font-weight: 400;
+  border: 2px solid black;
+  padding: 15px 40px;
+  border-radius: 4px;
+  justify-self: center;
+  grid-column: 1/-1;
+  margin-bottom: 0px;
+  margin-top: 20px;
+
+ }
+
+
+ .cta .button:hover {
+   color: white;
+   background-color: #39BD9C;
+   border: 2px solid #39BD9C;
+ }
+
 
 
 
@@ -78,8 +115,8 @@ grid-column: 4/10;
 
 figure {
   grid-column: 3/8;
-  margin-top: -150px;
-  margin-bottom: -150px;
+  margin-top: -120px;
+  margin-bottom: -100px;
 }
 
 figure img {
@@ -139,7 +176,7 @@ iframe, object, embed {
 
   figure {
 
-    margin-top: -80px;
+    margin-top: -60px;
     margin-bottom: -80px;
   }
 
@@ -163,7 +200,35 @@ iframe, object, embed {
   }
 
   .banner-text {
-    margin: 0px;
-    
+    /*font-size: 30px;
+    padding-top: 50px;*/
+
+    margin-bottom: 0px;
+    padding-bottom: 0px;
   }
+
+  .sub-text {
+    text-align: center;
+    margin-bottom: -10px;
+  }
+
+  .cta {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .cta .button {
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Roboto';
+    font-weight: 400;
+    border: 2px solid black;
+    padding: 15px 40px;
+    border-radius: 4px;
+    justify-self: center;
+    grid-column: 1/-1;
+    margin-bottom: 20px;
+    margin-top: 10px;
+
+   }
 }
